--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
 /* Add CSS Styling */
+.ainur {
+  background-color: rgb(255, 167, 167);
+  font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#pippin {
+  color: #0000ff;
+  font-size: 36px;
+}
+
+.sam {
+  font-size: 24px; 
+}
+
+#merry {
+  background-color: hsl(120, 100%, 75%);
+  font-weight: bold;
+}
