--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.gandalf,
+.wizard { 
+  font-size: 28px;
+  font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.gandalf {
+  background-color: black;
+  color: white;
+}
+
+.wizard {
+  background-color: yellow; 
+}
